android sdkmanager requires old modules fix